# document_face_detection

./: pyproject.toml
config/document_face_detection/: model.json
data/document_face_detection/: dummy_model.pth
processes/document_face_detection/: process.py
